k8s/koiner/amqp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  labels:
    app.kubernetes.io/component: controller
  name: nginx
  annotations:
    ingressclass.kubernetes.io/is-default-class: "true"
spec:
  controller: k8s.io/ingress-nginx

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: amqp-ingress
  namespace: amqp
  annotations:
    cert-manager.io/cluster-issuer: "cert-manager-webhook-dnsimple-production"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - amqp.koiner.app
      secretName: koiner-amqp-tls
  rules:
    - host: amqp.koiner.app
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: amqp
                port:
                  number: 15672
